# ai_researcher

./: .gitignore  README.md  pyproject.toml
ai_researcher/: app.py  client.py  graph.py  server.py
ai_researcher/agents/: orchestrator_agent.py  report_agent.py  research_agent.py
ai_researcher/static/: app.js  index.html  styles.css
ai_researcher/tools/: report_tools.py  research_tools.py
tests/: conftest.py  test_api_endpoints.py  test_job_lifecycle.py  test_server_tools.py
