[project]
name = "ai-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=3.0.0",
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "ollama>=0.6.1",
    "pip>=26.0.1",
    "playwright>=1.58.0",
    "reportlab>=4.4.10",
    "requests>=2.33.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_researcher*"]
